# TFLM

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Makefile.plank  Readme.md  Readme_zh.md  TFLM.pro  wscript
VS2019/TFLM/: TFLM.sln  TFLM.vcxproj  TFLM.vcxproj.filters
doc/: TFLMdir.md  build.md  tflite.mdj
training/: Dockerfile
training/mnist/: train.py
training/mnist/model/: mnist.h5  model.h  model.tflite
